# open-agent-skills-test-harness

./: .gitignore  EXPORT_README.md  LICENSE  Makefile  README.md  README_ExportSkills.md  README_Test_Framework.md  export.py  models.yaml
.github/: copilot-instructions.md
HowTos/: Install-For-Your-Agent.md  Simple-A-B-Test.md  Test-Skill-Combinations.md
agent-skill-evals/: .gitignore  FAQ.md  Makefile  README.md
harness/: DESIGN_MCP_Support.md  FAQ.md  Makefile  README.md  README_Test_Framework-Details.md  TODO_Contained_HOME.md  TODO_Version_Provenance.md  pyproject.toml
harness/HowTos/: Install-For-Your-Agent.md  Simple-A-B-Test.md  Test-Skill-Combinations.md
harness/agentskill_evals/: assertions.py  cli.py  exec.py  isolation.py  judge.py  mcp.py  notices.py  progress.py  runner.py  schema.py  selftest.py  spec.py  workspace_view.py  xattrs.py
harness/agentskill_evals/adapters/: __init__.py  antigravity.py  base.py  claude.py  codex.py  copilot.py
harness/fixtures/: echo_mcp_server.py
harness/tools/: mutate_mcp.py
nsidc-reference/: SKILL.md
scenarios/: README.md  cheapshot_harness_smoke.yaml  copilot_test_Adirondacks_Canopy_with_multi_No_Skills.yaml  copilot_test_Adirondacks_Canopy_with_multi_pipeline_skill.yaml  copilot_test_Adirondacks_Canopy_with_opus_4.8.yaml  copilot_test_Adirondacks_Canopy_with_opus_4.8_No_Skills.yaml  copilot_test_of_Mount_Rainier_Slope.yaml  copilot_test_of_Mount_Rainier_Slope_No_Skills_with_gpt_5.5.yaml  copilot_test_of_Mount_Rainier_Slope_No_Skills_with_opus_4.8.yaml  copilot_test_of_Mount_Rainier_Slope_with_opus_4.8.yaml  (+18 more)
(+170 files in other folders)
