[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentskill-evals"
version = "0.1.0"
description = "Run Agent Skill evals across multiple coding-agent CLIs (Claude Code, Codex, AntiGravity)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",   # YAML eval specs (JSON specs work without it)
]

[project.optional-dependencies]
schema = ["jsonschema>=4.0"]  # stricter output_schema validation (a built-in fallback exists)

[project.scripts]
agentskill-evals = "agentskill_evals.cli:main"

[tool.setuptools]
packages = ["agentskill_evals", "agentskill_evals.adapters"]
